@@ -1,3 +1,7 @@
+2007-06-04  Ian Lance Taylor  <iant@google.com>
+
+	* gcc.dg/Wstrict-overflow-18.c: New test.
+
 2007-05-31  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from mainline:
